# ChangeLog for dev-perl/AnyEvent
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/AnyEvent/ChangeLog,v 1.74 2009/11/22 11:22:19 robbat2 Exp $

*AnyEvent-5.2.1 (22 Nov 2009)

  22 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +AnyEvent-5.2.1.ebuild:
  Version bump via perl-bump experimental tool.

*AnyEvent-5.2.0.2 (17 Oct 2009)

  17 Oct 2009; Torsten Veller <tove@gentoo.org> +AnyEvent-5.2.0.2.ebuild:
  Version bump

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -AnyEvent-5.2.ebuild,
  +AnyEvent-5.2.0.1.ebuild:
  Remove the correct version

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -AnyEvent-5.1.2.ebuild,
  -AnyEvent-5.2.0.1.ebuild:
  Cleanup

*AnyEvent-5.2.0.1 (30 Sep 2009)

  30 Sep 2009; Torsten Veller <tove@gentoo.org> +AnyEvent-5.2.0.1.ebuild:
  Version bump

*AnyEvent-5.2 (14 Sep 2009)

  14 Sep 2009; Torsten Veller <tove@gentoo.org> +AnyEvent-5.2.ebuild:
  Version bump

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -AnyEvent-4.8.2.ebuild,
  -AnyEvent-4.8.6.ebuild, -AnyEvent-5.1.1.2.ebuild:
  Cleanup

*AnyEvent-5.1.2 (05 Sep 2009)

  05 Sep 2009; Torsten Veller <tove@gentoo.org> +AnyEvent-5.1.2.ebuild:
  Version bump

*AnyEvent-5.1.1.2 (22 Aug 2009)

  22 Aug 2009; Torsten Veller <tove@gentoo.org> +AnyEvent-5.1.1.2.ebuild:
  Version bump

*AnyEvent-4.8.6 (21 Jul 2009)

  21 Jul 2009; Torsten Veller <tove@gentoo.org> -AnyEvent-4.8.5.ebuild,
  +AnyEvent-4.8.6.ebuild:
  Version bump. Cleanup

*AnyEvent-4.8.5 (18 Jul 2009)

  18 Jul 2009; Torsten Veller <tove@gentoo.org> -AnyEvent-4.8.3.ebuild,
  +AnyEvent-4.8.5.ebuild:
  Version bump

*AnyEvent-4.8.3 (18 Jul 2009)

  18 Jul 2009; Torsten Veller <tove@gentoo.org> +AnyEvent-4.8.3.ebuild:
  Version bump

  16 Jul 2009; Torsten Veller <tove@gentoo.org> -AnyEvent-4.4.ebuild,
  -AnyEvent-4.4.1.ebuild, -AnyEvent-4.4.1.1.ebuild, -AnyEvent-4.4.2.ebuild,
  -AnyEvent-4.4.5.ebuild, -AnyEvent-4.4.5.1.ebuild, -AnyEvent-4.8.ebuild,