@@ -1,10 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST AnyEvent-2.53.tar.gz 12758 RMD160 0156794daefa5b671f811d4035b7108136b74431 SHA1 a999d5f9c8260ffd1805313acdff85ef5ccc804e SHA256 da67dd06b1cb8ea4032488c96082a46c8a045c5540aac12fd6f64bb2bcc34cc4
 DIST AnyEvent-5.201.tar.gz 181788 RMD160 022b85fcf5c43ffca06be9e52c971ec5d3ae1a28 SHA1 7760618789a11e9223d63cabf65eb05733d73ac4 SHA256 9b109a41409ee4fe45f631d773c72dc672b6e8831a89d6d5bbabaaf3a1f18f47
 DIST AnyEvent-5.202.tar.gz 182205 RMD160 019441bd059b76b5f6a746139aa4453b3424ce3e SHA1 cc417ee5f6d909306fb0a936a0fe03c7f6bc1bd3 SHA256 407dbc4f1a6883a0af29ddd27747980d2ffe753a1badb8449e1f61f65cc77129
 DIST AnyEvent-5.21.tar.gz 182927 RMD160 7811264655ed3cdc8bfb73a2a05de83d1dcc1cc5 SHA1 b36613667ccf76a4795da45c72d2fc80fa3eb72b SHA256 10bab760939101eeb230b5bd0df337d4a22becea13d4b5842aa48997216ba5d7
+DIST AnyEvent-5.22.tar.gz 184375 RMD160 104a339f1595871b641ecc068a89acdc3d55f567 SHA1 0f4cb056d3b768a1454447ad3be98885dda46d35 SHA256 156396f3c2933e9fbcaa869170063964ed34278596e2980eb9740c0d527d13bb
 EBUILD AnyEvent-2.5.3.ebuild 632 RMD160 56567db827492b06a06fa30d86a07475919365ee SHA1 8888fa8ceae2b094a62d9e0f36c6de8a5c8ce40a SHA256 49a8df856461057f77bba0d5194d228437abf58850d00235b4d33d9343f4ac6f
 EBUILD AnyEvent-5.2.0.1.ebuild 596 RMD160 82573f57bedfa56d8f0b240cde72903f249a2294 SHA1 cefed73f03b6e9a222f596186ebd8f0ca1e4f1de SHA256 05331ac3b066eeada59df5879a28ef95d0a79ca0b6c2e3e48bc6d2f9d87c8c69
 EBUILD AnyEvent-5.2.0.2.ebuild 596 RMD160 95ccf73a19bc19f17f057294e55396cbf7746279 SHA1 7e4f2cf7fe2c0efad917bf7d938c9a58dbb0cd8a SHA256 427441cfbb81c12a8b59f998dba6466565f0d5bd7a50986dea52c059736ab6a3
 EBUILD AnyEvent-5.2.1.ebuild 597 RMD160 3b718bce15f71b0efaae262e9482aeb4d01260ad SHA1 631050dc8c054d7c4fb0bd4aaaca9d7f9fdc909f SHA256 e9103feba307ba7a9c8d37292af9c67118ec85668b772021a24a87c07d1f49db
-MISC ChangeLog 9128 RMD160 3994f3b7d982654a31aa5153087362579036d6c7 SHA1 b85e4621270d12bfe26ac839a4fb89bd49c92c62 SHA256 feb963225ba1ffe4a96706b3c6bf3660811446fbebd3aebbf3abc6bbb7524a99
+EBUILD AnyEvent-5.2.2.ebuild 594 RMD160 6867278bc807a8c9a7820781f986e84191377c80 SHA1 34d7d3e784452b6652d1714321bef4470dfb3567 SHA256 9491d9d3e143065929a08aa90e57960e513ed85b7506bd2136dd75c9766aa238
+MISC ChangeLog 9244 RMD160 93ecf904d8eb3beaf1b41ee7c334e0332358b56e SHA1 1fe006d7024f767ba5b878c2b75223a90d5b5474 SHA256 211001d31d8f5cb84e90fcf07552d171e83d586de281485f707ebb15b0dcbecb
 MISC metadata.xml 195 RMD160 81740652d698ff5991aef39f017f3a3ea9850f49 SHA1 4a4b4328141828002869072f4aa9fbd9cb04594a SHA256 dff44c3dcc57cd79d458dd00bb5cdbd1b69a7ba945762815f6ffd4a9d401790c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkscIFYACgkQV3J2n04EauykZACgv0rctU1wRC81UgPejJa/o6Cu
+HhAAoMOPkLXehiCO3nMaQUxTDTn6WIB6
+=NJsJ
+-----END PGP SIGNATURE-----
